Made arrows visible again for testing skin slideshow bug.

--- a/src/components/champions/InfoPanel.scss
+++ b/src/components/champions/InfoPanel.scss
@@ -290,13 +290,13 @@
     border: 1px solid black;
 }
 
-.prev, .next {
-    display: none;
-}
-#slideShowEnd {
-    @extend %flex-prop;
-    position: absolute;
-    height: inherit;
-    width: inherit;
-    background-color: #555;
-}
+// .prev, .next {
+//     display: none;
+// }
+// #slideShowEnd {
+//     @extend %flex-prop;
+//     position: absolute;
+//     height: inherit;
+//     width: inherit;
+//     background-color: #555;
+// }
